# OCR_Test

./: OCR_main.py  command.txt  main.py  pyproject.toml
assets/BluePrism Text Data File/: 추출필드&데이터.xlsx
src/llm/: 1.json  LLM API결과 테스트 copy.xlsx  LLM API결과 테스트.xlsx  run_gptAPI.py  test.py
src/tesseract/: run_tesseract.py  test.py
test_result/250829_113822_인보이스/: page_002.txt  page_003.txt  page_004.txt
test_result/250829_121816_인보이스/: page_001.txt  page_005.txt  page_006.txt
